home page alignment fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,9 @@ li {
     background-image: url('../images/Inner-page01-header-bg_01.png');
     height: 350px;
 } */
-
+.carousel-caption.carousel-content h5 {
+    font-family: 'Poppins' !important;
+}
 .our-mission {
     background-image: url('../images/our-mission-bg.jpg');
     height: 350px;
@@ -448,7 +450,7 @@ div#banner-block-01 {
     margin-bottom:20px;
 }
 .carousel-left p {
-    margin: 38px 0px ;
+    padding-bottom:14px ;
 }
 .carousel-content .carousel-left {
     width: 560px;
@@ -488,7 +490,8 @@ div#banner-block-01 {
 .carousel-caption {
     position: absolute;
     right: 0% !important;
-    bottom: 25% !important;
+    /* bottom: 19.5% !important; */
+    bottom: 149px !important;
     left: 0% !important;
     color: #fff;
     text-align: center;
@@ -556,7 +559,9 @@ div#banner-block-01 {
 .branch-heading {
     text-align: center;
 }
-
+.branch-heading p {
+    padding-top: 18px;
+}
 .branch-heading h2,
 .recorde-txt h2 {
     font-size: 60px;
@@ -711,13 +716,22 @@ div#banner-block-01 {
 
 
 /* reh code */
+.address {
+    width: 100%;
+}
+.address a{
+    color:#fff;
+    text-decoration: none;
+}
+
 .top-r {
     display: flex !important;
     background-color:#424343 !important;
     /* border-radius:0px 0px 0px 50px !important; */
     color:#fff;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-top: 12px;
+    width: 100%;
 }
 .inner-heading {
     /* text-align: center; */
@@ -734,7 +748,7 @@ div#banner-block-01 {
 
 .team-card-box p {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .reh-record button.btn.btn-primary {
@@ -881,7 +895,7 @@ span {
     color: #424343;
     font-size: 22px;
     font-family: poppins;
-    margin-bottom: 35px;
+    padding: 15px 0px;
 }
 
 .home-sec-team{
@@ -908,13 +922,13 @@ span {
 .team-card-box p {
     font-size: 16px;
     font-family: poppins;
-    margin: 30px 0 0;
+    margin: 22px 0 0;
 }
 
 .view-more {
     width: 100%;
     text-align: center;
-    padding: 120px 0 120px;
+    padding: 58px 0px 120px;
 }
 
 /* team */
@@ -923,7 +937,8 @@ span {
 
 #services-main {
     background-image: url("../images/cards-bg_02.png");
-    padding: 230px 0 280px;
+    /* padding: 230px 0 280px; */
+    padding: 130px 0 130px;
 }
 
 .services-txt-blk .branch-heading h2 {
@@ -1114,7 +1129,7 @@ span {
 #article-main {
     /* background-image: url("../images/red_02.png"); */
     background-color: #8d1a22;
-    padding: 170px 0 240px;
+    padding: 130px 0 138px;
 }
 
 .article-block {
@@ -1453,9 +1468,6 @@ span {
         }
     .carousel-content .carousel-left h1 {
         font-size: 42px;
-    }
-    .carousel-left p {
-        margin: 26px 0px;
     }
     .reh-cus-box{
         width: 90vw;
